[package]
name = "safe_thing"
version = "0.1.0"
authors = ["Gabriel Viganotti <gabrielviganotti@gmail.com>"]
license = "GPL-3.0"

[features]
use-mock-routing = ["safe_app/use-mock-routing"]
fake-auth = ["safe_app/testing"]

[dependencies]
safe_app = { git = "https://github.com/maidsafe/safe_client_libs.git", rev = "dbb01377" }
safe_core = { git = "https://github.com/maidsafe/safe_client_libs.git", rev = "dbb01377" }
ffi_utils = { git = "https://github.com/maidsafe/safe_client_libs.git", rev = "dbb01377" }
routing = "~0.35.0"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
rustc-serialize = "0.3"
