[package]
name = "safe_thing"
version = "0.1.0"
authors = ["Gabriel Viganotti <gabrielviganotti@gmail.com>"]
license = "GPL-3.0"

[features]
use-mock-routing = ["safe_app/use-mock-routing"]
fake-auth = ["safe_app/testing"]

[dependencies]
safe_app = "~0.9.0"
safe_core = "~0.32.0"
ffi_utils = "~0.11.0"
#routing = "~0.37.0"
serde = "~1.0.82"
serde_derive = "~1.0.82"
serde_json = "~1.0.33"
#rustc-serialize = "0.3"
