[package]
name = "safe_thing"
version = "0.0.1"
authors = ["Gabriel Viganotti <gabrielviganotti@gmail.com>"]
license = "GPL-3.0"
description = "This crate is part of the Secure Access For Everything framework, which is an IoT framework for software developers integrating IoT devices to the SAFE Network, preventing them from worrying about network infrastructure, security, and/or authentication & authorisation protocols. The SAFEthing framework is composed of several parts but its core is a Rust crate with a simple and well defined Rust API. This is intended to be a next-gen IoT framework and communication protocol to be designed and developed by the SAFE Network community itself."
documentation = "https://github.com/bochaco/safe_thing/blob/master/README.md"
homepage = "https://safenetforum.org/t/introducing-the-safething-framework-secure-access-for-everything/13469"
repository = "https://github.com/bochaco/safe_thing"
readme = "../README.md"
keywords = ["IoT", "SAFE", "SAFENetwork", "communication", "descentralised"]

[features]
use-mock-routing = ["safe_app/use-mock-routing"]
fake-auth = ["safe_app/testing"]

[dependencies]
safe_app = "~0.9.0"
safe_core = "~0.32.0"
ffi_utils = "~0.11.0"
serde = "~1.0.82"
serde_derive = "~1.0.82"
serde_json = "~1.0.33"
log = "0.4.6"
env_logger = "0.5.0"
